# BDTK

cider-velox/src/: CMakeLists.txt
cider-velox/src/ciderTransformer/: CiderPlanPatterns.cpp
cider-velox/test/: CMakeLists.txt  CiderOperatorTest.cpp  CiderPlanBuilder.cpp  CiderPlanBuilder.h
cider-velox/test/planTransformerTest/: CMakeLists.txt  CiderCompoundJoinMixedTest.cpp  CiderCompoundPatternTest.cpp  CiderLeftDeepJoinPatternTest.cpp  CiderPatternKeepOrginalRewriterTest.cpp  CiderPatternNullptrRewriterTest.cpp  FilterProjectSwapTest.cpp
cider-velox/test/planTransformerTest/utils/: CMakeLists.txt  CiderPlanRewriters.h  PlanTransformerTestBase.h  VeloxPlanSequenceBuilder.cpp  VeloxPlanSequenceBuilder.h
src/cider-velox/src/: CMakeLists.txt  CiderCrossJoinBuild.cpp  CiderCrossJoinBuild.h  CiderHashJoinBuild.cpp  CiderPipelineOperator.cpp  CiderPipelineOperator.h  CiderPlanNodeTranslator.h  CiderVeloxOptions.cpp
src/cider/exec/plan/substrait/: SubstraitPlan.cpp  SubstraitPlan.h
src/cider/exec/processor/: DefaultBatchProcessor.cpp  DefaultBatchProcessor.h  JoinHandler.cpp  JoinHandler.h
src/cider/include/cider/processor/: BatchProcessor.h  BatchProcessorContext.h
